--- a/docker_test/dockerfile
+++ b/docker_test/dockerfile
@@ -9,7 +9,7 @@ WORKDIR /my_dir
 COPY . /my_dir
 
 # Install any needed packages specified in requirements.txt
-# RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 # Make port 80 available to the world outside this container
 EXPOSE 80
